--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,23 @@
-.App {
-  text-align: center;
+
+
+.header {
+   padding: 10px;
+   background-color: rgb(233, 224, 224);
+   border-bottom: 1px solid #999;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header a {
+  color:  #0072ff;
+  text-decoration: none;
+  margin-left: 20px;
+  margin-right: 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header a:hover{
+  color:  #666;
+}
+ 
+.header .active{
+  color:  #2c7613;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
