--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-
-
 .header {
    padding: 10px;
    background-color: rgb(233, 224, 224);
@@ -18,7 +16,108 @@
 }
  
 .header .active{
-  color:  #2c7613;
-  background-color: firebrick;
+  color:  red;
 }
 
+/* Login page starts */
+
+.loginPage{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.error {
+  color: red;
+}
+
+/* Dashboard starts */
+
+.space{
+  margin: 10px;
+}
+
+.loading{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+h1{
+  text-align: center;
+}
+
+h2{
+ padding: 10px;
+}
+
+
+.login, .logout{
+  float: right;
+  background-color: rgb(224, 19, 19);
+  padding: 5px;
+  color: #fff !important;
+}
+
+.login{
+  background-color: rgb(19, 224, 29) !important;
+}
+
+#components-layout-demo-custom-trigger .trigger {
+  padding: 0 24px;
+  font-size: 18px;
+  line-height: 64px;
+  cursor: pointer;
+  transition: color 0.3s;
+}
+
+#components-layout-demo-custom-trigger .trigger:hover {
+  color: #1890ff;
+}
+
+#components-layout-demo-custom-trigger .logo {
+  height: 32px;
+  margin: 16px;
+  background: rgba(255, 255, 255, 0.3);
+}
+
+.site-layout .site-layout-background {
+  background: #fff;
+}
+
+.anticon {
+  margin: 10px;
+  font-size: 20px;
+}
+
+.header{
+  display: flex;
+  justify-content: first baseline;
+  align-items: center;
+}
+
+section {
+  height: 100vh;
+  /* overflow: hidden; */
+}
+
+.ant-menu-title-content{
+  display: flex;
+  align-items: center;
+}
+
+.ant-image-img{
+  border-radius: 50%;
+  width: 40px !important;
+  padding:5px;
+}
+
+
+.ant-image-mask-info, .ant-image-mask{
+  opacity: 0;
+  border-radius: 50% !important;
+}
+
+.ant-menu-item{
+  padding-left: 10px !important;
+}
